Fix android text message spacing

--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@
 }
 
 .messageBody-android li {
-  padding: .5em;
+  padding: 0 .5em;
   overflow: hidden;
   display: flex;
 }
@@ -292,12 +292,22 @@
 
 /* Special Modifications */
 
-.firstWrapper-android {
-  margin-bottom: -.8em;
+.messageBody-android li.singleWrapper-android {
+  padding-top: .5em;
+  padding-bottom: .5em;
 }
 
-.lastWrapper-android {
-  margin-top: -.8em;
+.messageBody-android li.firstWrapper-android {
+  padding-top: .5em;
+  padding-bottom: .2em;
+}
+
+.messageBody-android li.middleWrapper-android {
+  padding-bottom: .2em;
+}
+
+.messageBody-android li.lastWrapper-android {
+  padding-bottom: .5em;
 }
 
 .timestamp-android {
@@ -323,7 +333,7 @@
 
   <ol class="messageBody-android">
 
-    <li class="replyWrapper-android">
+    <li class="replyWrapper-android singleWrapper-android">
       <span class="timestamp-android">8:15 pm</span>
       <span class="reply-android">
         <p>Outgoing message</p>
@@ -363,7 +373,7 @@
       </span>
     </li>
 
-    <li class="replyWrapper-android">
+    <li class="replyWrapper-android middleWrapper-android">
       <span class="reply-android middleReply-android">
         <p>Another one</p>
       </span>
@@ -375,7 +385,7 @@
       </span>
     </li>
 
-    <li class="textWrapper-android">
+    <li class="textWrapper-android singleWrapper-android">
       <span class="textIconWrapper-android">
         <div class="icon-android">C</div>
       </span>
